--- a/stockTest/src/main/resources/templates/login.html
+++ b/stockTest/src/main/resources/templates/login.html
@@ -4,26 +4,34 @@
     <meta charset="UTF-8">
     <title>Stock login</title>
     <link rel="stylesheet" type="text/css" href="/css/login.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Slabo+27px|Ultra&display=swap" rel="stylesheet">
     <!-- версия для разработки, отображает полезные предупреждения в консоли -->
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue-resource@1.5.1"></script>
 </head>
 <body>
-<div class="container" id="signIn_container">
+<div class="container">
 
-    <form class="forms" id="loginForm" method="post" action="/login">
-        <div class="row">
-            <input class="inp" id="loginInput" type="text" placeholder="login" name="login"/>
-        </div>
-        <div class="row">
-            <input class="inp" id="passwordInput" type="text" placeholder="password" name="password"/>
-        </div>
-        <div class="row" align="center">
-            <input  type="submit" id="btnSignIn" value="Log In"/>
-        </div>
-    </form>
-    <form class="forms" id="toSignUp" action="signUp" align="center">
-        <button type="submit">to Sign up</button>
+    <div class="header_logo">
+
+        <h1>Welcome, please login...</h1>
+
+    </div>
+
+    <div id="forms_container" class="container">
+
+        <form id="loginForm" method="post" action="/login">
+            <input type="text" placeholder="login" name="login"/>
+            <input type="text" placeholder="password" name="password"/>
+            <button type="submit">
+                Login
+            </button>
+        </form>
+
+    </div>
+
+    <form class="container" id="toSignUp" action="/" align="center">
+        <button type="submit" formaction="/">back to main</button>
     </form>
 
 </div>
