--- a/stockTest/src/main/resources/static/css/products.css
+++ b/stockTest/src/main/resources/static/css/products.css
@@ -1,3 +1,16 @@
+*{
+    box-sizing: border-box;
+}
+body{
+    background: #0ed145;
+}
+h1, h2{
+    margin: 0;
+    font-size: 50px;
+    color: #ffffff;
+    font-family: 'Ultra', serif;
+    position: center;
+}
 table, th, td{
     border: 1px solid black;
 }
@@ -16,11 +29,31 @@ td{
     text-align: center;
     vertical-align: center;
 }
-
 tr:hover {background-color: #f5f5f5;}
 
-select{
-    allign: center;
+.header_logo{
+    display: flex;
+    justify-content: center;
+}
+
+.page_btn{
+    float: left;
+    margin: 5px;
+}
+
+#select_container{
+    display: flex;
+    justify-content: center;
+}
+
+.container{
+    display: flex;
+    justify-content: center;
+}
+
+.select_div{
+    margin: 15px;
+    float: left;
 }
 
 .center{
