--- a/stockTest/src/main/resources/templates/products.html
+++ b/stockTest/src/main/resources/templates/products.html
@@ -40,11 +40,14 @@
         <button id="nextPageBtn"></button>
     </div>
 
+    <br>
+
     <div class="container">
-        <form action="/products/add" align="center">
+        <form action="/products/add">
             <button align="center" type="submit">Add product</button>
         </form>
-        <form action="/categories" align="center">
+
+        <form action="/categories">
             <button align="center" type="submit">Categories</button>
         </form>
     </div>
