--- a/stockTest/src/main/resources/static/css/products.css
+++ b/stockTest/src/main/resources/static/css/products.css
@@ -29,8 +29,24 @@ td{
     text-align: center;
     vertical-align: center;
 }
-tr:hover {background-color: #f5f5f5;}
-
+button{
+    font-family: 'Slabo 27px', serif;
+    font-size: 23px;
+    color: whitesmoke;
+    width: inherit;
+    height: max-content;
+    background-color: green;
+    border-color: chartreuse;
+    border-style: initial;
+}
+form{
+    margin: 10px;
+    float: bottom;
+}
+button:hover{
+    color: brown;
+}
+tr:hover {background-color: lawngreen;}
 .header_logo{
     display: flex;
     justify-content: center;
@@ -54,11 +70,4 @@ tr:hover {background-color: #f5f5f5;}
 .select_div{
     margin: 15px;
     float: left;
-}
-
-.center{
-    margin: auto;
-    width: 50%;
-    padding: 10px;
-    border: 5px solid green;
 }
