--- a/stockTest/src/main/resources/static/css/addProducts.css
+++ b/stockTest/src/main/resources/static/css/addProducts.css
@@ -11,16 +11,25 @@ h1, h2{
     font-family: 'Ultra', serif;
     position: center;
 }
-.add_form_section{
-    float: left;
-    display: grid;
-    margin-left: auto;
+input{
+    font-size: 25px;
+    font-family: 'Slabo 27px', serif;
 }
-
-#add-div{
-    position: absolute;
-    top: 80px;
-    left: 100px;
-    padding: 10px;
-    width: 100px;
+select{
+    font-size: 25px;
+    font-family: 'Slabo 27px', serif;
+}
+button{
+    font-size: 25px;
+    font-family: 'Slabo 27px', serif;
+}
+.header_logo{
+    margin-top: 100px;
+    display: flex;
+    justify-content: center;
+}
+.container{
+    margin-top: 33px;
+    display: flex;
+    justify-content: center;
 }
