--- a/stockTest/src/main/resources/static/css/categories.css
+++ b/stockTest/src/main/resources/static/css/categories.css
@@ -1,15 +1,23 @@
-.center{
-    margin: auto;
-    width: 50%;
-    padding: 10px;
-    border: 5px solid green;
+*{
+    box-sizing: border-box;
+}
+body{
+    background: #0ed145;
+}
+h1, h2{
+    margin: 0;
+    font-size: 50px;
+    color: #ffffff;
+    font-family: 'Ultra', serif;
+    position: center;
 }
 table, th, td{
     border: 1px solid black;
 }
 table{
     border-collapse: collapse;
-    width: 70%
+    width: 70%;
+    padding: 10px;
 }
 th{
     height: 50px;
@@ -21,8 +29,63 @@ td{
     text-align: center;
     vertical-align: center;
 }
+button{
+    font-family: 'Slabo 27px', serif;
+    font-size: 23px;
+    color: whitesmoke;
+    width: inherit;
+    height: max-content;
+    background-color: green;
+    border-color: chartreuse;
+    border-style: initial;
+}
+button:hover{
+    color: brown;
+}
+tr:hover {background-color: lawngreen;}
+input, textarea{
+    font-family: 'Slabo 27px', serif;
+    font-size: 17px;
+    width: fit-content;
+    margin-top: 10px;
+}
+.header_logo{
+    margin-top: 50px;
+    display: flex;
+    justify-content: center;
+}
 
-tr:hover {background-color: #f5f5f5;}
+.container{
+    display: flex;
+    justify-content: center;
+    margin-top: 33px;
+}
+
+.editBtn{
+    font-family: 'Slabo 27px', serif;
+    font-size: 18px;
+    color: whitesmoke;
+    width: inherit;
+    height: max-content;
+    background-color: green;
+    border-color: chartreuse;
+    border-style: initial;
+}
+.editBtn:hover{
+    color: brown;
+}
+
+.addEditBtn{
+    font-family: 'Slabo 27px', serif;
+    font-size: 18px;
+    color: whitesmoke;
+    width: fit-content;
+    height: max-content;
+    background-color: green;
+    border-color: chartreuse;
+    border-style: initial;
+    margin-left: 10px;
+}
 
 .modal-mask {
     position: fixed;
@@ -45,7 +108,7 @@ tr:hover {background-color: #f5f5f5;}
     width: 300px;
     margin: 0px auto;
     padding: 20px 30px;
-    background-color: #fff;
+    background-color: #0ed145;
     border-radius: 2px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, .33);
     transition: all .3s ease;
