--- a/stockTest/src/main/resources/templates/products.html
+++ b/stockTest/src/main/resources/templates/products.html
@@ -10,7 +10,6 @@
     <script src="https://cdn.jsdelivr.net/npm/vue-resource@1.5.1"></script>
 </head>
 <body>
-
     <div class="header_logo">
         <h1>Products</h1>
     </div>
@@ -43,6 +42,14 @@
     <br>
 
     <div class="container">
+        <div class="addProductsDiv">
+
+        </div>
+        <script>
+            new Vue({
+
+            })
+        </script>
         <form action="/products/add">
             <button align="center" type="submit">Add product</button>
         </form>
